Feature/add user ranking b (#71)
* feat: add profile completion tracking and update points system for user ranking

* feat: implement profile completion milestones with automatic point allocation

* feat: Implement UserRankingMetricsService for engagement and conversion calculations

- Added UserRankingMetricsService to encapsulate engagement and conversion potential logic.
- Defined engagement levels based on score and streak metrics.
- Established conversion potential rules based on user contacts and engagement levels.

feat: Create UserRankingMilestoneService for user milestone tracking

- Introduced UserRankingMilestoneService to manage user milestones and point allocation.
- Implemented checks for content views, profile completion, and phone milestones.
- Added logging and auditing for milestone achievements.

feat: Develop UserRankingValidationService for input validation

- Created UserRankingValidationService to centralize input validation logic.
- Implemented validations for timestamps, streaks, non-negative values, daily usage, profile completion, string lengths, and content types.
- Enhanced error handling with appropriate WebApplicationException responses.